// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert should match snapshot 1`] = `
Object {
  "cron": null,
  "enabled": false,
  "harvestMode": "allAtOnce",
  "language": "en",
  "name": "New Source",
  "script": "newScript",
  "termsOfUse": "Not translated",
  "url": null,
}
`;

exports[`resolvers chain anon should not pass 1`] = `
Object {
  "data": Object {
    "upsertSource": null,
  },
  "errors": Array [
    [GraphQLError: You must be logged in to do this],
  ],
}
`;

exports[`resolvers chain should throw on invalid input 1`] = `
Object {
  "data": Object {
    "upsertSource": null,
  },
  "errors": Array [
    [GraphQLError: Invalid input],
  ],
}
`;

exports[`resolvers chain user should not pass 1`] = `
Object {
  "data": Object {
    "upsertSource": null,
  },
  "errors": Array [
    [GraphQLError: You are not allowed to do this],
  ],
}
`;

exports[`update should match snapshot 1`] = `
Object {
  "cron": "1 1 * * *",
  "enabled": false,
  "harvestMode": "oneByOne",
  "id": "6d0d717e-aa9d-11e7-abc4-cec278b6b50a",
  "language": "en",
  "name": "Updated source",
  "script": "updatedScript",
  "termsOfUse": "New terms of use",
  "url": "http://google.com",
}
`;
